--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -6,7 +6,7 @@
     <title>Hello World Page</title>
 </head>
 <body>
-    <h1>¡Hola mundo!</h1>
+    <h1>¡¡Hola mundo!!</h1>
     <p></p>
 </body>
 </html>
