--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -139,9 +139,11 @@
 </section>
 
 <section class="sabores__grid">
+
 <!-- CARD: MELON -->
 <article class="sabor-card sabor-card--melon">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -153,12 +155,17 @@
     </g>
   </svg>
 
-  <p>Con este calor...</p>
-  <p class="sabor-card__subtitle">de melón</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Con este calor...
+  </p>
 
-  </div>
+  <p class="sabor-card__text sabor-card__text--hover">
+    de melón
+  </p>
+</div>
 
-  <!-- TEXTURA -->
+  <!-- TEXTURA DEL SABOR -->
   <svg
     class="sabor-card__texture"
     viewBox="0 0 210 210"
@@ -176,6 +183,7 @@
 <!-- CARD: GUAYABA -->
 <article class="sabor-card sabor-card--guayaba">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -187,13 +195,38 @@
     </g>
   </svg>
 
-  <p>Quisiera uno...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Quisiera uno...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de guayaba
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M27.0292 28.4247L20.6864 29.1066V21.4251L28.3673 23.6198L27.0292 28.4247Z" fill="#FFAE85"/>
+<path d="M60.4311 152.324L55.3986 156.242L51.3546 149.711L59.042 147.534L60.4311 152.324Z" fill="#FFAE85"/>
+<path d="M9.05951 210L3 208.01L6.16399 201.01L12.2597 206.173L9.05951 210Z" fill="#FFAE85"/>
+<path d="M153.806 35.5693L156.61 29.8396L163.108 33.9328L157.155 39.2619L153.806 35.5693Z" fill="#FFAE85"/>
+<path d="M198.519 126.002L192.973 122.855L197.456 116.616L202.412 122.883L198.519 126.002Z" fill="#FFAE85"/>
+<path d="M13.1184 57.1009L7.62986 53.8515L12.2278 47.6977L17.0664 54.056L13.1184 57.1009Z" fill="#FFAE85"/>
+<path d="M171.004 197.652L165.97 201.566L161.932 195.031L169.62 192.86L171.004 197.652Z" fill="#FFAE85"/>
+<path d="M206 4.74953L201.08 8.80869L196.853 2.39501L204.474 0L206 4.74953Z" fill="#FFAE85"/>
+  </svg>
 </article>
 
 <!-- CARD: CHOCOLATE -->
 <article class="sabor-card sabor-card--chocolate">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -205,13 +238,34 @@
     </g>
   </svg>
 
-  <p>Para este frío...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Para este frío...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de chocolate
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M207 210V178.367L184.259 187.995L195.628 210H207Z" fill="black"/>
+<path d="M70.1509 51.1343L86.6907 42.3753L78.4208 27.0677H63.9496L70.1509 51.1343Z" fill="black"/>
+<path d="M29.2831 161.884L37.2093 153.632L12.0561 143.318L8.60845 150.882L29.2831 161.884Z" fill="black"/>
+<path d="M27.4991 18.5665L11.6489 0L2 9.28324L27.4991 18.5665Z" fill="black"/>
+  </svg>
 </article>
 
 <!-- CARD: FRESA -->
 <article class="sabor-card sabor-card--fresa">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -223,13 +277,35 @@
     </g>
   </svg>
 
-  <p>Estaría rico...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Con este calor...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de melón
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
+<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
+<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
+<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
+<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+  </svg>
 </article>
 
 <!-- CARD: LIMON -->
 <article class="sabor-card sabor-card--limon">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -241,13 +317,35 @@
     </g>
   </svg>
 
-  <p>Para un gustito...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Con este calor...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de melón
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
+<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
+<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
+<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
+<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+  </svg>
 </article>
 
 <!-- CARD: MAMEY -->
 <article class="sabor-card sabor-card--mamey">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -259,13 +357,35 @@
     </g>
   </svg>
 
-  <p>Ojalá haya...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Con este calor...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de melón
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
+<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
+<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
+<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
+<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+  </svg>
 </article>
 
 <!-- CARD: MANGO -->
 <article class="sabor-card sabor-card--mango">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -277,13 +397,35 @@
     </g>
   </svg>
 
-  <p>Que ya sea temporada...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Con este calor...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de melón
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
+<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
+<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
+<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
+<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+  </svg>
 </article>
 
 <!-- CARD: CAFE -->
 <article class="sabor-card sabor-card--cafe">
 
+<!-- SVG DE FONDO -->
   <svg
     class="sabor-card__bg"
     viewBox="0 0 282 282"
@@ -295,8 +437,29 @@
     </g>
   </svg>
 
-  <p>Se me antojó...</p>
+<div class="sabor-card__content">
+  <p class="sabor-card__text sabor-card__text--main">
+    Con este calor...
+  </p>
 
+  <p class="sabor-card__text sabor-card__text--hover">
+    de melón
+  </p>
+</div>
+
+  <!-- TEXTURA DEL SABOR -->
+  <svg
+    class="sabor-card__texture"
+    viewBox="0 0 210 210"
+    aria-hidden="true"
+    xmlns="http://www.w3.org/2000/svg"
+>
+    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
+<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
+<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
+<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
+<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+  </svg>
 </article>
 
 </section>
