CARDS HOVER + BADGE HOVER

--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Díaz de Helado</title>
 
-  <!-- Archivo SemiBold -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@200;@400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:opsz,wght@8..144,100..900&display=swap"
+  rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Castoro:reg@;ital@1&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
@@ -238,6 +238,7 @@
     </g>
   </svg>
 
+  <!-- TEXTO PRINCIPAL -->
 <div class="sabor-card__content">
   <p class="sabor-card__text sabor-card__text--main">
     Para este frío...
@@ -247,6 +248,9 @@
     de chocolate
   </p>
 </div>
+
+<!-- BADGE OPCIONAL -->
+  <p class="sabor-card__badge">¡SIEMPRE HAY!</p>
 
   <!-- TEXTURA DEL SABOR -->
   <svg
