GRID SABORES COMPLETO

--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -7,9 +7,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Archivo:opsz,wght@8..144,100..900&display=swap"
   rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Castoro:reg@;ital@1&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -283,11 +283,11 @@
 
 <div class="sabor-card__content">
   <p class="sabor-card__text sabor-card__text--main">
-    Con este calor...
+    Estaría rico...
   </p>
 
   <p class="sabor-card__text sabor-card__text--hover">
-    de melón
+    de fresa
   </p>
 </div>
 
@@ -298,11 +298,16 @@
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
 >
-    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
-<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
-<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
-<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
-<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+    <path d="M175.511 172.412L179.984 171.928V177.356L174.566 175.805L175.511 172.412Z" fill="#5E4034"/>
+<path d="M163.495 40.756L167.045 37.9859L169.896 42.602L164.476 44.1407L163.495 40.756Z" fill="#5E4034"/>
+<path d="M199.727 0L204 1.4061L201.769 6.35273L197.471 2.70275L199.727 0Z" fill="#5E4034"/>
+<path d="M41.8119 169.899L39.835 173.946L35.2511 171.054L39.4485 167.289L41.8119 169.899Z" fill="#5E4034"/>
+<path d="M14.4766 59.7489L18.3903 61.9738L15.2287 66.3816L11.733 61.9528L14.4766 59.7489Z" fill="#5E4034"/>
+<path d="M99.289 33.7676L102.449 36.9776L98.205 40.3518L96.0496 35.1358L99.289 33.7676Z" fill="#5E4034"/>
+<path d="M185.322 152.148L189.194 154.444L185.95 158.791L182.538 154.299L185.322 152.148Z" fill="#5E4034"/>
+<path d="M33.8835 9.11863L37.4359 6.35273L40.2825 10.971L34.8604 12.5055L33.8835 9.11863Z" fill="#5E4034"/>
+<path d="M5 191.676L8.47048 188.807L11.4515 193.341L6.0756 195.032L5 191.676Z" fill="#5E4034"/>
+<path d="M132.364 206.645L135.832 203.776L138.813 208.31L133.437 210L132.364 206.645Z" fill="#5E4034"/>
   </svg>
 </article>
 
@@ -323,13 +328,16 @@
 
 <div class="sabor-card__content">
   <p class="sabor-card__text sabor-card__text--main">
-    Con este calor...
+    Para un gustito...
   </p>
 
   <p class="sabor-card__text sabor-card__text--hover">
-    de melón
+    pay de limón
   </p>
 </div>
+
+<!-- BADGE OPCIONAL -->
+  <p class="sabor-card__badge">¡SIEMPRE HAY!</p>
 
   <!-- TEXTURA DEL SABOR -->
   <svg
@@ -338,11 +346,10 @@
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
 >
-    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
-<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
-<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
-<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
-<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+    <path d="M2 210V178.367L24.7411 187.995L13.3716 210H2Z" fill="#D3AA72"/>
+<path d="M138.849 51.1343L122.309 42.3753L130.579 27.0677H145.05L138.849 51.1343Z" fill="#D3AA72"/>
+<path d="M179.717 161.884L171.791 153.632L196.944 143.318L200.392 150.882L179.717 161.884Z" fill="#D3AA72"/>
+<path d="M181.501 18.5665L197.351 0L207 9.28324L181.501 18.5665Z" fill="#D3AA72"/>
   </svg>
 </article>
 
@@ -363,11 +370,11 @@
 
 <div class="sabor-card__content">
   <p class="sabor-card__text sabor-card__text--main">
-    Con este calor...
+    Ojalá haya...
   </p>
 
   <p class="sabor-card__text sabor-card__text--hover">
-    de melón
+    de mamey
   </p>
 </div>
 
@@ -378,11 +385,18 @@
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
 >
-    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
-<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
-<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
-<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
-<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+    <g clip-path="url(#clip0_73_86)">
+<path d="M195.551 194.602L209.507 187.787C210.978 190.795 209.047 194.761 205.192 196.64C201.338 198.52 197.021 197.611 195.551 194.602Z" fill="#FFAE85"/>
+<path d="M10.1949 13.0328L30.7645 2.99998C32.9323 7.43523 30.0861 13.2789 24.405 16.0502C18.724 18.8215 12.3608 17.4623 10.1949 13.0328Z" fill="#FFAE85"/>
+<path d="M36.2807 39.5723L26.3947 35.0556C27.3706 32.9242 30.3741 32.2048 33.1066 33.4523C35.8392 34.6998 37.2566 37.4408 36.2807 39.5723Z" fill="#FFAE85"/>
+<path d="M169.908 92.4754L160.023 87.9587C161 85.8272 164.002 85.1079 166.734 86.3554C169.467 87.6028 170.884 90.342 169.908 92.4754Z" fill="#FFAE85"/>
+<path d="M9.88594 208L3.95023e-07 203.481C0.975892 201.35 3.97939 200.633 6.7119 201.88C9.44441 203.127 10.8618 205.868 9.88594 208Z" fill="#FFAE85"/>
+</g>
+<defs>
+<clipPath id="clip0_73_86">
+<rect width="210" height="210" fill="white"/>
+</clipPath>
+</defs>
   </svg>
 </article>
 
@@ -403,11 +417,11 @@
 
 <div class="sabor-card__content">
   <p class="sabor-card__text sabor-card__text--main">
-    Con este calor...
+    Que ya sea temporada...
   </p>
 
   <p class="sabor-card__text sabor-card__text--hover">
-    de melón
+    de mango
   </p>
 </div>
 
@@ -418,11 +432,16 @@
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
 >
-    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
-<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
-<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
-<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
-<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+    <g clip-path="url(#clip0_73_84)">
+<path d="M-0.3908 30.5958L-5 11.0716L5.91376 26.2021L12.8255 0L23.8401 37.8926L-0.3908 30.5958Z" fill="#FFE6A9"/>
+<path d="M215 201.522L207.775 190.537L199.855 201.518L194.838 182.503L186.845 210L215 201.522Z" fill="#FFE6A9"/>
+<path d="M169.158 186.084V169.602L180.95 189.335L169.158 186.084Z" fill="#FFE6A9"/>
+</g>
+<defs>
+<clipPath id="clip0_73_84">
+<rect width="210" height="210" fill="white"/>
+</clipPath>
+</defs>
   </svg>
 </article>
 
@@ -443,13 +462,16 @@
 
 <div class="sabor-card__content">
   <p class="sabor-card__text sabor-card__text--main">
-    Con este calor...
+    Se me antojó...
   </p>
 
   <p class="sabor-card__text sabor-card__text--hover">
-    de melón
+    de café
   </p>
 </div>
+
+<!-- BADGE OPCIONAL -->
+  <p class="sabor-card__badge">¡SIEMPRE HAY!</p>
 
   <!-- TEXTURA DEL SABOR -->
   <svg
@@ -458,11 +480,14 @@
     aria-hidden="true"
     xmlns="http://www.w3.org/2000/svg"
 >
-    <path d="M14.4491 16.3985L0.492869 23.2132C-0.977609 20.2053 0.953341 16.2395 4.80766 14.3598C8.66198 12.48 12.9787 13.3887 14.4491 16.3985Z" fill="#FFE6A9"/>
-<path d="M199.805 197.967L179.236 208C177.068 203.565 179.914 197.721 185.595 194.95C191.276 192.178 197.639 193.538 199.805 197.967Z" fill="#FFE6A9"/>
-<path d="M173.719 171.428L183.605 175.944C182.629 178.076 179.626 178.795 176.893 177.548C174.161 176.3 172.743 173.559 173.719 171.428Z" fill="#FFE6A9"/>
-<path d="M40.0916 118.525L49.9775 123.041C48.9997 125.173 45.9981 125.892 43.2656 124.645C40.5331 123.397 39.1157 120.658 40.0916 118.525Z" fill="#FFE6A9"/>
-<path d="M200.114 3L210 7.51854C209.024 9.65003 206.021 10.3675 203.288 9.12C200.556 7.87252 199.138 5.13149 200.114 3Z" fill="#FFE6A9"/>
+    <path d="M7.24079 41.0006L12.7205 57.4565C9.17717 58.6419 5.07635 55.9218 3.5623 51.3771C2.04824 46.8323 3.69744 42.186 7.24079 41.0006Z" fill="#5E4034"/>
+<path d="M13.7996 55.2529L9.42423 42.114C12.2517 41.1678 15.5269 43.3396 16.7348 46.9678C17.9426 50.596 16.6292 54.3067 13.7996 55.2529Z" fill="#5E4034"/>
+<path d="M183.031 195.115L174.118 209.986C170.915 208.057 170.317 203.163 172.775 199.057C175.233 194.95 179.83 193.187 183.031 195.115Z" fill="#5E4034"/>
+<path d="M176.489 209.374L183.608 197.501C186.165 199.04 186.644 202.947 184.678 206.226C182.712 209.505 179.057 210.915 176.489 209.374Z" fill="#5E4034"/>
+<path d="M50.1495 142.111L63.3578 146.133C62.4921 148.991 58.8305 150.409 55.1837 149.295C51.5368 148.182 49.2837 144.969 50.1495 142.111Z" fill="#5E4034"/>
+<path d="M62.4266 144.418L51.881 141.201C52.5736 138.919 55.4962 137.788 58.4081 138.675C61.3201 139.562 63.1277 142.136 62.4266 144.418Z" fill="#5E4034"/>
+<path d="M193.792 3.73668L207.001 7.75857C206.133 10.6162 202.473 12.0324 198.824 10.9189C195.175 9.8055 192.924 6.59645 193.792 3.73668Z" fill="#5E4034"/>
+<path d="M206.069 6.04397L195.511 2.82857C196.204 0.546679 199.126 -0.5858 202.04 0.30325C204.954 1.1923 206.762 3.76208 206.069 6.04397Z" fill="#5E4034"/>
   </svg>
 </article>
 
