--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -493,6 +493,52 @@
 
 </section>
 
+<section id="pedidos" class="pedidos">
+  <!-- Imagen -->
+  <div class="pedidos__image">
+    <img src="assets/assets_Pedidos_Empaque.png" alt="Helado artesanal">
+  </div>
+
+  <!-- Contenido -->
+  <div class="pedidos__content">
+    <h2>¿Cuál vas a querer? ¡Haz tu pedido!</h2>
+    <p>
+      Ofrecemos helado por litro, y no te juzgamos si lo quieres para compartir o si eres envidiositx. Como nuestra producción es limitada, por el momento sólo hacemos entregas en la Ciudad de México. Sigue estos sencillos pasos para realizar tu orden:
+    </p>
+
+    <!-- Pasos -->
+    <div class="pedidos__steps">
+      <div class="step">
+        <div class="step__number">1</div>
+        <div class="step__text">
+          Da clic en el botón de WhatsApp: éste abrirá automáticamente nuestro chat en tu dispositivo.
+        </div>
+      </div>
+
+      <div class="step">
+        <div class="step__number">2</div>
+        <div class="step__text">
+          Mándanos un mensaje con tu solicitud. Te pedimos que la realices con al menos una semana de anticipación, ya que nuestra producción es casera.
+        </div>
+      </div>
+
+      <div class="step">
+        <div class="step__number">3</div>
+        <div class="step__text">
+          Una vez confirmado tu pedido, realiza la transferencia y compártenos el comprobante de pago por el mismo medio.
+        </div>
+      </div>
+
+      <div class="step">
+        <div class="step__number">2</div>
+        <div class="step__text">
+          Llevaremos tu helado al punto de entrega que hayamos establecido. ¡Lo único que queda es disfrutar!
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
   <!-- Secciones -->
   <main>
     <section id="hero"></section>
