--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -539,6 +539,38 @@
   </div>
 </section>
 
+<section id="contacto" class="contacto">
+  <div class="contacto__wrapper">
+    <h2>Porque mamá siempre necesita estar en contacto:</h2>
+
+    <!-- Datos -->
+    <div class="contacto__data">
+      <a href="mailto:hola@diazdehelado.com" class="contacto__item">
+        <img src="assets/assets_Contacto_IconoMail.svg" alt="">
+        <span>hola@diazdehelado.com</span>
+      </a>
+
+      <a href="tel:+5215573825574" class="contacto__item">
+        <img src="assets/assets_Contacto_IconoTel.svg" alt="">
+        <span>55 7382 5574</span>
+      </a>
+
+      <a href="https://instagram.com/diazdehelado" class="contacto__item" target="_blank">
+        <img src="assets/assets_Contacto_IconoIG.svg" alt="">
+        <span>@diazdehelado</span>
+      </a>
+    </div>
+
+    <!-- GIF -->
+    <img
+      class="contacto__gif"
+      src="img/mama.gif"
+      alt="Ilustración animada"
+    >
+  </div>
+</section>
+
+
   <!-- Secciones -->
   <main>
     <section id="hero"></section>
