--- a/DiazDeHelado.html
+++ b/DiazDeHelado.html
@@ -48,13 +48,14 @@
 <section id="hero" class="hero">
 
   <video
-    class="hero__video"
-    src="assets/hero-video.mp4"
-    autoplay
-    muted
-    loop
-    playsinline
-  ></video>
+  class="hero__video"
+  autoplay
+  muted
+  loop
+  playsinline
+>
+  <source src="assets/assets_Hero_Animacion.webm" type="video/webm">
+</video>
 
 <div class="hero__content">
 
@@ -562,11 +563,16 @@
     </div>
 
     <!-- GIF -->
-    <img
-      class="contacto__gif"
-      src="img/mama.gif"
-      alt="Ilustración animada"
-    >
+    <video
+  class="contacto__gif"
+  autoplay
+  muted
+  loop
+  playsinline
+>
+  <source src="assets/assets_Contacto_Animacion.webm" type="video/webm">
+</video>
+    
   </div>
 </section>
 
